<resources>
    <string name="app_name">ShoppingApp</string>
    <string name="view_all">view all</string>
    <string name="back">back</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping">Shipping</string>
    <string name="total_payment">Total Payment</string>
    <string name="checkout">Checkout</string>
    <string name="order_confirmed">Order confirmed</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="phone">Mobile number</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="orders_history">Orders history</string>
    <string name="log_out">Log out</string>
    <string name="details">Details</string>
    <string name="active">active</string>
    <string name="delivered">delivered</string>
    <string name="total">Total:</string>
    <string name="state">State:</string>
    <string name="date">Date:</string>
    <string name="items">Items</string>
    <string name="dollar">$</string>
</resources>